--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Customize the toast for mobile screens */
+@media (max-width: 640px) {
+  .toast-mobile {
+    margin-top: 8px;
+    position: absolute;
+    right: 3.5%;
+    font-size: 1rem;
+    max-width: 50vw;
+  }
+}
